tests/compile_fails/empty_rename.rs
use dissolve_derive::Dissolve;

#[derive(Dissolve)]
struct EmptyRename {
	#[dissolved(rename = "")]
	field: String,
}

fn main() {}
