tests/compile_fails/empty_rename.stderr
error: unexpected end of input, expected identifier
 --> tests/compile_fails/empty_rename.rs:3:10
  |
3 | #[derive(Dissolve)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Dissolve` (in Nightly builds, run with -Z macro-backtrace for more info)
